@@ -7,6 +7,8 @@ package gc;
 public class TestAllocation {
     public static final int _1MB = 1024 * 1024;
 
+    // -verbose:gc -Xms20M -Xmx20M -Xmn10M -XX:+PrintGCDetails -XX:SurvivorRatio=8
+
     public static void main(String[] args) {
         byte[] allocation1, allocation2, allocation3, allocation4;
         allocation1 = new byte[2 * _1MB];
